p-0 wip
wip


fix mysql dep


wip


wip

SBM: applied recipe 'boot-2.7-3.0-dependency-version-update'
java17


wip


almost works


wip


blank state


wip


WIP


WIP


WIP


wip


wip


wip


wip


wip


WIP


wip


wip


wip


WIP


wip


wip


wip


wip


wip


wip


WIP


WIP


wip


wip


wip


wip


wip


wip


wip


wip


wip


wip


wip


WIP


PWT-1: Use OTP Imagebuilder

update cicd pipeline to use OTP Imagebuilder

PWT-1: Use OTP Imagebuilder

add OTEL Collector endpoints

PWT-1: Use OTP Imagebuilder

add more agent environment variable configuration

remove otel span exporter 


otel config


wip


try bump sampling.priority


remove space


wip


wip


wip


wip


PWT-1: Use OTP Imagebuilder

split image build from deployment

update gitignore

 use app_id job variable

register gauge for number of owners

add Sentry and test exception

add Sentry and test exception

add Sentry logback to all services

throw exception every 5 owners

Add health indicator on number of owners

Use JarJar compliant HealthDetailsIndicator

wip


WIP


wip


wip


wip


Wip


wip


wip


wip


wip


wip


remove otel exporter


remove all tracing


wip


wip


wip


wip


wip


wip


wip


wip


add unique constraint on owners full name


add more visits data


wip


fix random get_owner_details


Add "Easter Egg"


update Easter Egg


try marking exemplars as priority


fix with @Primary


rename exemplar trace attribute


remove sampling.priority attribute from Exemplars


change to String


add just `exemplar` attribute 


use int


bump chancellor image


remove the sampling.exemplar attribute


test it


wip